fixed styling of grid to make it fit the same on small screens as well

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
   background-color: #f0e4e4c4;
 }
 .container {
-  height: 33rem;
+  height: 33.1rem;
   max-width: 30rem;
   position: absolute;
   display: grid;
